# sdl3-template

./: .gitignore  CMakeLists.txt  vcpkg.json
src/: main.cpp
